<resources>
    <!-- Main Activity -->
    <string name="app_name">ThreeActivities</string>
    <string name="main_textView_Title">Do Something!</string>
    <string name="action_settings">Settings</string>
    <string name="main_editText_Activity1Input">Hvem elsker kage?</string>
    <string name="main_editText_Activity2Input">Hvilken størelse sko bruger du?</string>
    <string name="main_button_GoToActivity1">Activity 1</string>
    <string name="main_button_GoToActivity2">Activity 2</string>

    <!-- Activity 1 -->
    <string name="title_activity_activity1">Activity1</string>

    <!-- Activity 2 -->
    <string name="title_activity_activity2">Activity2</string>
    <string name="activity2_button_Return">Return</string>
    <string name="activity2_textView_DoYouWantCake">Do you want a picture of a delicious cake?</string>
    <string name="activity2_checkBox_Yes">Yes</string>
    <string name="activity2_checkBox_No">No</string>
</resources>
